Epic commit change background color

--- a/ostracodMultiplayerConfig/gameConfig.json
+++ b/ostracodMultiplayerConfig/gameConfig.json
@@ -5,6 +5,7 @@
     "stylesheets": ["stylesheets/game.css"],
     "canvasWidth": 1200,
     "canvasHeight": 800,
+    "canvasBackgroundColor": "#BFF5FF",
     "framesPerSecond": 30,
     "maximumPlayerCount": 15
 }
